name:                ads
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Matthias Treydte
maintainer:          mt@waldheinz.de
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable ads
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -debug
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    base                 >=4.6 && <4.7,
    base16-bytestring    >= 0.1,
    base64-bytestring    >= 1.0,
    binary               >= 0.5,
    binary-conduit       >= 1.2,
    bytestring           >= 0.10,
    cipher-aes           >= 0.2,
    conduit              >= 1.0,
    configurator         >= 0.2,
    containers           >= 0.5,
    filepath             >= 1.3,
    hashable             >= 1.2,
    hslogger             >= 1.2,
    http-types           >= 0.8,
    network              >= 2.4,
    network-conduit      >= 1.0,
    SHA                  >= 1.6,
    stm                  >= 2.4,
    stm-chans            >= 3.0,
    stm-conduit          >= 2.2,
    text                 >= 0.11,
    transformers         >= 0.3,
    unordered-containers >= 0.2,
    wai                  >= 2.1,
    warp                 >= 2.1,
    zlib                 >= 0.5
                 
  hs-source-dirs:      src
  default-language:    Haskell2010
