name:                ads
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Matthias Treydte
maintainer:          mt@waldheinz.de
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable ads
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -XDeriveDataTypeable
  -- -debug
  c-sources:
    cbits/rijndael.c,
    cbits/lzma/lzma.c,
    cbits/lzma/LzmaDec.c
    
  cc-options:          -Wall -O2 -std=c99
  build-depends:
    base                 >=4.6 && <4.7,
    aeson                >= 0.7,
    async                >= 2.0,
    base16-bytestring    >= 0.1,
    base64-bytestring    >= 1.0,
    binary               >= 0.5,
    binary-conduit       >= 1.2,
    bytestring           >= 0.10,
    bzlib                >= 0.5,
    cipher-aes           >= 0.2,
    concurrent-extra     >= 0.7,
    conduit              >= 1.0,
    conduit-extra        >= 1.1,
    configurator         >= 0.2,
    containers           >= 0.5,
    cprng-aes            >= 0.5,
    crypto-pubkey        >= 0.2,
    directory            >= 1.2,
    fec                  >= 0.1,
    filepath             >= 1.3,
    hashable             >= 1.2,
    hslogger             >= 1.2,
    http-types           >= 0.8,
    lrucache             >= 1.1,
    network              >= 2.4,
    random               >= 1.0,
    SHA                  >= 1.6,
    stm                  >= 2.4,
    stm-chans            >= 3.0,
    stm-conduit          >= 2.2,
--    tar                  >= 0.4,
    text                 >= 0.11,
    time                 >= 1.1,
    transformers         >= 0.3,
    unix                 >= 2.6,
    unordered-containers >= 0.2,
    vector               >= 0.10,
    void                 >= 0.6,
    wai                  >= 2.1,
    wai-extra            >= 2.1,
    warp                 >= 2.1,
    zip-archive          >= 0.2,
    zlib                 >= 0.5

  hs-source-dirs:      src
  default-language:    Haskell2010
