name:                ads
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Matthias Treydte
maintainer:          mt@waldheinz.de
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

data-files:
	default-config

flag sandbox
  description: Enable building the sandbox
  default:     False

library
  hs-source-dirs:      src/lib
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded
  c-sources:
    src/cbits/rijndael.c,
    src/cbits/lzma/lzma.c,
    src/cbits/lzma/LzmaDec.c
  cc-options:          -Wall -O2 -std=c99
  exposed-modules:
    Codec.Archive.Tar.Read,
    Codec.Archive.Tar.Types,
    Freenet,
    Freenet.Archive,
    Freenet.Base64,
    Freenet.Chk,
    Freenet.Companion,
    Freenet.Compression
    Freenet.Fetch,
    Freenet.Fproxy,
    Freenet.Insert,
    Freenet.Metadata,
    Freenet.Mime,
    Freenet.Pcfb,
    Freenet.Rijndael,
    Freenet.SplitFile,
    Freenet.Ssk,
    Freenet.Types,
    Freenet.URI,
    Logging,
    Net,
    Node,
    Message,
    Peers,
    RestApi,
    Statistics,
    Store,
    Time,
    Types,
    Utils

  build-depends:
    base                 ==4.*,
    aeson                >= 0.7,
    array                >= 0.4,
    async                >= 2.0,
    base16-bytestring    >= 0.1,
    base64-bytestring    >= 1.0,
    binary               >= 0.5,
    binary-conduit       >= 1.2,
    bytestring           >= 0.9,
    bzlib                >= 0.5,
    cipher-aes           >= 0.2,
    concurrent-extra     >= 0.7,
    conduit              >= 1.0,
    conduit-extra        >= 1.1,
    configurator         >= 0.2,
    cprng-aes            >= 0.5,
    crypto-pubkey        >= 0.2,
    directory            >= 1.2,
    fec                  >= 0.1,
    filepath             >= 1.3,
    hashable             >= 1.2,
    hslogger             >= 1.2,
    http-types           >= 0.8,
    lrucache             >= 1.1,
    network              >= 2.4,
    QuickCheck           >= 2.7,
    random               >= 1.0,
    SHA                  >= 1.6,
    stm                  >= 2.4,
    stm-chans            >= 3.0,
    stm-conduit          >= 2.2,
    text                 >= 0.11,
    time                 >= 1.1,
    transformers         >= 0.3,
    unix                 >= 2.6,
    unix-bytestring,
    unordered-containers >= 0.2,
    vector               >= 0.10,
    void                 >= 0.6,
    wai                  >= 2.1,
    wai-app-static       >= 2.0,
    wai-extra            >= 2.1,
    warp                 >= 2.1,
    zip-archive          >= 0.2,
    zlib                 >= 0.5

executable ads
  hs-source-dirs: src/main
  default-language: Haskell2010
  main-is: Main.hs
  ghc-options: -Wall -threaded
  build-depends:
    ads, aeson, base, bytestring, configurator, directory, filepath, network,
    random, stm, unix, warp
  
executable ads-sandbox
  hs-source-dirs:   src/sandbox
  default-language: Haskell2010
  main-is:          Main.hs
  ghc-options:      -Wall -threaded
  
  if flag(sandbox)
    buildable:      True
  else
    buildable:      False

  build-depends:
    ads, base, conduit, mtl, random, stm-conduit

test-suite test-ads
  type:
    exitcode-stdio-1.0
  default-language:
    Haskell2010
  hs-source-dirs:
    src/tests
  main-is:
    Main.hs
  ghc-options:
    -Wall -threaded
  build-depends:
    ads,
    base                       >= 4.0,
    bytestring,
    test-framework             >= 0.8,
    test-framework-quickcheck2 >= 0.3,
    QuickCheck                 >= 2.0,
    stm
